# shellkeeper

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
assets/: shellkeeper.desktop
scripts/: setup.sh
src/: app.rs  colors.rs  config.rs  main.rs  models.rs  pty.rs  ssh_parse.rs  theme.rs  vault.rs
src/ui/: dialog.rs  mod.rs  overlays.rs  settings.rs  sidebar.rs  tabs.rs  terminal.rs  widgets.rs
