[package]
name = "shellkeeper"
version = "0.1.3"
edition = "2021"
description = "SSH connection manager with embedded terminal emulator"
authors = ["David Zambrano Lizarazo <jdzl@gitlab.com>", "Juan Fajardo"]
license = "Apache-2.0"
repository = "https://gitlab.com/jdzl/sshed"
homepage = "https://gitlab.com/jdzl/sshed"

[package.metadata.deb]
maintainer = "David Zambrano Lizarazo (jdzl) <jdzl@gitlab.com>"
copyright = "2026, David Zambrano Lizarazo (jdzl), Juan Fajardo"
license-file = ["LICENSE", "1"]
extended-description = """
ShellKeeper is a fast, keyboard-friendly SSH connection manager with a built-in
xterm-256color terminal emulator. Supports multiple sessions, port forwarding,
persistent sessions via tmux, session logging, and a built-in SSH key manager.
"""
depends = "$auto, openssh-client, tmux, sshfs, sshpass, libsecret-1-0"
section = "net"
priority = "optional"
assets = [
    ["target/release/shellkeeper", "usr/bin/", "755"],
    ["assets/icons/shellkeeper_16.png",  "usr/share/icons/hicolor/16x16/apps/shellkeeper.png",  "644"],
    ["assets/icons/shellkeeper_24.png",  "usr/share/icons/hicolor/24x24/apps/shellkeeper.png",  "644"],
    ["assets/icons/shellkeeper_32.png",  "usr/share/icons/hicolor/32x32/apps/shellkeeper.png",  "644"],
    ["assets/icons/shellkeeper_48.png",  "usr/share/icons/hicolor/48x48/apps/shellkeeper.png",  "644"],
    ["assets/icons/shellkeeper_64.png",  "usr/share/icons/hicolor/64x64/apps/shellkeeper.png",  "644"],
    ["assets/icons/shellkeeper_128.png", "usr/share/icons/hicolor/128x128/apps/shellkeeper.png","644"],
    ["assets/icons/shellkeeper_256.png", "usr/share/icons/hicolor/256x256/apps/shellkeeper.png","644"],
    ["assets/icons/shellkeeper_512.png", "usr/share/icons/hicolor/512x512/apps/shellkeeper.png","644"],
    ["assets/shellkeeper.desktop", "usr/share/applications/shellkeeper.desktop", "644"],
]

[[bin]]
name = "shellkeeper"
path = "src/main.rs"

[dependencies]
eframe      = { version = "0.29", features = ["default"] }
egui        = "0.29"
portable-pty = "0.8"
vt100       = "0.15"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
arboard     = "3"
image       = { version = "0.25", default-features = false, features = ["png"] }
# keyring: platform-conditional — Linux needs dbus/secret-service; macOS uses native Keychain
keyring     = { version = "3", features = [] }
anyhow      = "1"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
rfd         = "0.15"
shellexpand = "3"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
opt-level = 3
lto = true
strip = true
